force-app/main/default/objects/Parametrica__c/Parametrica__c.object-meta.xml
<CustomObject>
    <description>Paramátrica con Lista de Valores</description>
    <label>Paramétrica</label>
    <nameField>
        <label>Código</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paramétricas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>