force-app/main/default/objects/Parametrica__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <description>Correspondencia con Area jerarquía antigua (antes 2021)</description>
    <label>Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>