force-app/main/default/objects/Parametrica__c/fields/Auxiliar__c.field-meta.xml
<CustomField>
    <fullName>Auxiliar__c</fullName>
    <label>Auxiliar</label>
    <length>80</length>
    <type>Text</type>
</CustomField>