force-app/main/default/objects/Parametrica__c/fields/Codigo_Mercado__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Mercado__c</fullName>
    <description>Código API de los 8 valores de Mercado</description>
    <label>Codigo Mercado</label>
    <length>50</length>
    <type>Text</type>
</CustomField>