force-app/main/default/objects/Parametrica__c/fields/Codigo_Padre__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Padre__c</fullName>
    <label>Código_Padre</label>
    <length>80</length>
    <type>Text</type>
</CustomField>