force-app/main/default/objects/Parametrica__c/fields/Direccion_Operaciones__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Operaciones__c</fullName>
    <label>Dirección Operaciones</label>
    <length>255</length>
    <type>Text</type>
</CustomField>