force-app/main/default/objects/Parametrica__c/fields/Division2__c.field-meta.xml
<CustomField>
    <fullName>Division2__c</fullName>
    <description>Campo con la división de Latinoamérica (Sector Público y Privado)</description>
    <label>División</label>
    <length>50</length>
    <type>Text</type>
</CustomField>