force-app/main/default/objects/Parametrica__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <description>Correspondencia con división antigua jerarquía (anterior 2021)</description>
    <label>División</label>
    <length>50</length>
    <type>Text</type>
</CustomField>