force-app/main/default/objects/Parametrica__c/fields/Importe_B1_B2__c.field-meta.xml
<CustomField>
    <fullName>Importe_B1_B2__c</fullName>
    <label>Importe B1 B2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>