force-app/main/default/objects/Parametrica__c/fields/Importe_B3__c.field-meta.xml
<CustomField>
    <fullName>Importe_B3__c</fullName>
    <label>Importe B3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>