force-app/main/default/objects/Parametrica__c/fields/Importe_Big_Deal__c.field-meta.xml
<CustomField>
    <fullName>Importe_Big_Deal__c</fullName>
    <label>Importe Big Deal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>