force-app/main/default/objects/Parametrica__c/fields/Importe_limite_Horizontal__c.field-meta.xml
<CustomField>
    <fullName>Importe_limite_Horizontal__c</fullName>
    <label>Importe límite Horizontal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>