force-app/main/default/objects/Parametrica__c/fields/Maestro__c.field-meta.xml
<CustomField>
    <fullName>Maestro__c</fullName>
    <label>Maestro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Asesoría Jurídica</fullName>
            </value>
            <value>
                <fullName>Authorised Officer</fullName>
            </value>
            <value>
                <fullName>Business Unit</fullName>
            </value>
            <value>
                <fullName>CCO</fullName>
            </value>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>Compliance</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>CSO</fullName>
            </value>
            <value>
                <fullName>Delivery Center</fullName>
            </value>
            <value>
                <fullName>Dir. Financiera Corporativa</fullName>
            </value>
            <value>
                <fullName>Dir. Intenacional</fullName>
            </value>
            <value>
                <fullName>Director Q&amp;A</fullName>
            </value>
            <value>
                <fullName>División</fullName>
            </value>
            <value>
                <fullName>Línea de Sevicios</fullName>
            </value>
            <value>
                <fullName>Mercado</fullName>
            </value>
            <value>
                <fullName>País</fullName>
            </value>
            <value>
                <fullName>Resp. Preventa</fullName>
            </value>
            <value>
                <fullName>Sociedad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>