force-app/main/default/objects/Parametrica__c/fields/Mercado1__c.field-meta.xml
<CustomField>
    <fullName>Mercado1__c</fullName>
    <description>Nivel 1 de la estructura mercado</description>
    <label>Mercado1</label>
    <length>50</length>
    <type>Text</type>
</CustomField>