force-app/main/default/objects/Parametrica__c/fields/Mercado2__c.field-meta.xml
<CustomField>
    <fullName>Mercado2__c</fullName>
    <description>Nivel 2 de la estructura mercado</description>
    <label>Mercado2</label>
    <length>50</length>
    <type>Text</type>
</CustomField>