force-app/main/default/objects/Parametrica__c/fields/Mercado3__c.field-meta.xml
<CustomField>
    <fullName>Mercado3__c</fullName>
    <description>Nivel 3 de la estructura mercado</description>
    <label>Mercado3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>