force-app/main/default/objects/Parametrica__c/fields/Mercado_lookup__c.field-meta.xml
<CustomField>
    <fullName>Mercado_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mercado</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Parametrica__c.Maestro__c</field>
            <operation>equals</operation>
            <value>Mercado</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Parametrica__c</referenceTo>
    <relationshipLabel>Paramétricas</relationshipLabel>
    <relationshipName>Mercado_lookup</relationshipName>
    <type>Lookup</type>
</CustomField>