force-app/main/default/objects/Parametrica__c/fields/Negocio__c.field-meta.xml
<CustomField>
    <fullName>Negocio__c</fullName>
    <label>Negocio</label>
    <length>50</length>
    <type>Text</type>
</CustomField>