force-app/main/default/objects/Parametrica__c/fields/Pais__c.field-meta.xml
<CustomField>
    <fullName>Pais__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>País</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Parametrica__c.Maestro__c</field>
            <operation>equals</operation>
            <value>País</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Parametrica__c</referenceTo>
    <relationshipLabel>Paramétricas (País)</relationshipLabel>
    <relationshipName>Param_tricas</relationshipName>
    <type>Lookup</type>
</CustomField>