force-app/main/default/objects/Parametrica__c/fields/Pais_Objetivo__c.field-meta.xml
<CustomField>
    <fullName>Pais_Objetivo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>País Objetivo</label>
    <type>Checkbox</type>
</CustomField>