force-app/main/default/objects/Parametrica__c/fields/Responsable_Area_Pais_IT__c.field-meta.xml
<CustomField>
    <fullName>Responsable_Area_Pais_IT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Area Pais IT&amp;DS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Responsable_Area_Pais</relationshipName>
    <type>Lookup</type>
</CustomField>