force-app/main/default/objects/Parametrica__c/fields/Responsable_Preventa__c.field-meta.xml
<CustomField>
    <fullName>Responsable_Preventa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsable Preventa</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Param_tricas1</relationshipName>
    <type>Lookup</type>
</CustomField>