force-app/main/default/objects/Parametrica__c/fields/Sociedad_API__c.field-meta.xml
<CustomField>
    <fullName>Sociedad_API__c</fullName>
    <label>Sociedad API</label>
    <length>100</length>
    <type>Text</type>
</CustomField>