force-app/main/default/objects/Parametrica__c/fields/Sociedad_crear_expediente__c.field-meta.xml
<CustomField>
    <fullName>Sociedad_crear_expediente__c</fullName>
    <label>Sociedad crear expediente</label>
    <length>20</length>
    <type>Text</type>
</CustomField>