force-app/main/default/objects/Parametrica__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>