force-app/main/default/objects/Parametrica__c/fields/Tipo_Padre__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Padre__c</fullName>
    <label>Tipo Padre</label>
    <length>80</length>
    <type>Text</type>
</CustomField>