force-app/main/default/objects/Parametrica__c/recordTypes/Estructura_Organizativa.recordType-meta.xml
<RecordType>
    <fullName>Estructura_Organizativa</fullName>
    <active>true</active>
    <label>Estructura Organizativa</label>
</RecordType>