force-app/main/default/objects/Parametrica__c/recordTypes/Otros.recordType-meta.xml
<RecordType>
    <fullName>Otros</fullName>
    <active>true</active>
    <label>Otros</label>
</RecordType>